--- a/MyWebsite/css/update.css
+++ b/MyWebsite/css/update.css
@@ -186,7 +186,7 @@ form{
 .navmenu{
     background-color:rgb(223, 223, 223);
     height: fit-content;
-    width: 25.2%;
+    width: max-content;
     border-radius:18px;
     overflow: hidden;
     display: flex;
@@ -194,17 +194,17 @@ form{
     margin-right: auto;
     flex-direction: row;
     justify-content: center;
-    transition: width 1s ease-in-out;
+   /* transition: width 1s ease-in-out;*/
     
 }
 
 
 
 
-.navmenu:hover{
+/*.navmenu:hover{
     width:50%;
     }
-
+*/
 
 .navmenu a{
     float:left;
