--- a/MyWebsite/css/delete.css
+++ b/MyWebsite/css/delete.css
@@ -206,9 +206,9 @@ form{
 /*Menu Navegação*/
 
 .navmenu{
-    background-color:rgb(20, 20, 20);
+    background-color:rgb(233, 233, 233);
     height: fit-content;
-    width: 25.2%;
+    width: max-content;
     border-radius:18px;
     overflow: hidden;
     display: flex;
@@ -216,24 +216,25 @@ form{
     margin-right: auto;
     flex-direction: row;
     justify-content: center;
-    transition: width 1s ease-in-out;
+    /*transition: width 1s ease-in-out;*/
     
 }
 
 
 
 
-.navmenu:hover{
+/*.navmenu:hover{
     width:50%;
     }
-
+*/
 
 .navmenu a{
     float:left;
     display:block;
-    color:white;
+    color:black;
     text-align: center;
     /*border-radius: 12px;*/ 
+    
     padding: 14px 16px;
     font-size: 17px;
     text-decoration: none;
@@ -241,13 +242,24 @@ form{
     }
 
 .navmenu a:hover{
-    background-color: rgb(49, 49, 49);
-    color:white;
+    background-color: rgb(201, 201, 201);
+    
 }
 
 .navmenu .icon{
     display:none;
 }
+
+#deletar{
+    background-color:  rgb(147, 2, 204);
+    color:white;
+    transition: background-color .2s ease-in;
+}
+
+#deletar:hover{
+ background-color: rgb(124, 0, 173);   
+}
+
 
 
 @media screen and (max-width:600px){
