--- a/MyWebsite/css/search_correct.css
+++ b/MyWebsite/css/search_correct.css
@@ -83,7 +83,7 @@ p{
 
 
 .centralized{
-    width:max-content;
+    width:fit-content;
     height:100%;
     display: flex;
     flex-direction: column;
@@ -97,6 +97,7 @@ p{
 
 .centralized p{
     color:white;
+    text-align:center;
 }
 @media (max-width:480px){
     .centralized{
@@ -129,12 +130,12 @@ h3{
     text-align: center;
 
     letter-spacing: 1.5px;
-    color:black;
+    color:rgb(20, 20, 20);
 }
 
 input[type=text],input[type=password] {
-    width: 96.5%;
-    height:15%;
+    width: 100%;
+    height:15px;
     border: 2px solid #bebebe;
     background-color: #e0e0e0;
     border-radius: 5px; 
@@ -158,10 +159,18 @@ input:focus{
 
 }
 
+#check_tabela_toda{
+width: fit-content;
+height:fit-content;
+display: inline;
+
+}
+
 form{
     align-items: center;
    
 }
+
 
 .buttn{
     
@@ -216,7 +225,6 @@ form{
     color:black;
     text-align: center;
     /*border-radius: 12px;*/ 
-    
     padding: 14px 16px;
     font-size: 17px;
     text-decoration: none;
@@ -232,14 +240,43 @@ form{
     display:none;
 }
 
-#registrar{
+#buscar{
     background-color:  rgb(147, 2, 204);
     color:white;
+    
     transition: background-color .2s ease-in;
 }
 
-#registrar:hover{
+#buscar:hover{
  background-color: rgb(124, 0, 173);   
+}
+
+
+#highlight_search_example{
+    color:rgb(147, 2, 204);
+    width:min-content;
+    margin-inline:auto;
+    display:block;
+    justify-content: center;
+
+}
+
+
+#Highlights{
+    color:rgb(147, 2, 204);
+    
+}
+
+
+
+
+/*Inicio decoração das "saídas" da query*/
+
+.p_resultados{
+    height: 100%;
+    width:100%;
+    background-color: rgb(20, 20, 20);
+    border: 2px solid red;
 }
 
 
@@ -260,7 +297,18 @@ form{
   }
 */
 
-  @media (max-width:600px){
+@media(max-width:830px) and (max-height:1180px){
+    .centralized{
+        width:50%;
+    
+    }
+    
+    body{
+        background-image: url("../imgs/testtt.png");
+    }
+}  
+
+@media (max-width:600px){
     [class*="navmenu"]{
         width:fit-content;
         scale:90%;
@@ -271,7 +319,7 @@ form{
     }
   }
 
-  @media(max-width:430){
+  @media (max-width:430) and (max-height:792px){
     body{
         background-image: url("/imgs/teste400px.png");
     }
@@ -283,6 +331,7 @@ form{
         height:fit-content;
     }
   }
+  
 
   @media(max-width:390px){
     .navmenu{
@@ -298,6 +347,15 @@ form{
     width:fit-content;
     scale:75%;
   }
+
+  .centralized{
+    width:100%;
+  }
+
+.centralized p{
+    width: fit-content;
+}
+
 }
 
 
