--- a/MyWebsite/css/teste_atualizar.css
+++ b/MyWebsite/css/teste_atualizar.css
@@ -21,7 +21,7 @@ body{
     
 
     background-image: url("../imgs/testtt.png");
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
 
@@ -61,20 +61,7 @@ body{
 
   /*fim barra scroll*/
 
-
-
-#bg_overlay{
-display: inline;
-height:100%;
-width:100%;
-
-}
-
-#legenda_delete{
-    color:white;
-}
-
-p{
+  p{
     color:white;
     
 }
@@ -84,14 +71,12 @@ p{
 
 .centralized{
     width:max-content;
-    height:100%;
-    display: flex;
+    display:flex;
     flex-direction: column;
-    box-sizing:border-box;
     background-color: rgb(20, 20, 20);
     margin-left: auto;
     margin-right:auto;
-    padding:20px;
+    padding:1%;
     border-radius: 12px;
 }
 
@@ -108,7 +93,6 @@ p{
 
 h1{
     text-align: center;
-    position: static;
     letter-spacing: 2.5px;
     color:white;
     /*text-shadow: 0 0 20px purple;*/
@@ -127,14 +111,13 @@ h1{
 
 h3{
     text-align: center;
-
     letter-spacing: 1.5px;
     color:black;
 }
 
 input[type=text],input[type=password] {
     width: 96.5%;
-    height:15%;
+    height:15px;
     border: 2px solid #bebebe;
     background-color: #e0e0e0;
     border-radius: 5px; 
@@ -188,7 +171,7 @@ form{
 /*Menu Navegação*/
 
 .navmenu{
-    background-color:rgb(233, 233, 233);
+    background-color:rgb(223, 223, 223);
     height: fit-content;
     width: max-content;
     border-radius:18px;
@@ -198,7 +181,7 @@ form{
     margin-right: auto;
     flex-direction: row;
     justify-content: center;
-    /*transition: width 1s ease-in-out;*/
+   /* transition: width 1s ease-in-out;*/
     
 }
 
@@ -216,7 +199,6 @@ form{
     color:black;
     text-align: center;
     /*border-radius: 12px;*/ 
-    
     padding: 14px 16px;
     font-size: 17px;
     text-decoration: none;
@@ -232,19 +214,19 @@ form{
     display:none;
 }
 
-#registrar{
-    background-color:  rgb(147, 2, 204);
-    color:white;
-    transition: background-color .2s ease-in;
+#atualizar{
+    background-color:rgb(147, 2, 204);
 }
 
-#registrar:hover{
- background-color: rgb(124, 0, 173);   
+@media screen and (max-width:600px){
+    .navmenu:not(:first-child){display:none;}
+    .navmenu a.icon{
+        float:right;
+        display:block;
+    }
 }
 
-
-
-/*@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
@@ -256,49 +238,7 @@ form{
       display: block;
       text-align: left;
     }
-      
   }
-*/
-
-  @media (max-width:600px){
-    [class*="navmenu"]{
-        width:fit-content;
-        scale:90%;
-    }
-
-    body{
-        background-size: 430px 935px;
-    }
-  }
-
-  @media(max-width:430){
-    body{
-        background-image: url("/imgs/teste400px.png");
-    }
-  }
-
-  @media (max-width:400px){
-    *{
-      
-        height:fit-content;
-    }
-  }
-
-  @media(max-width:390px){
-    .navmenu{
-
-
-       width:100%;
-
-       
-    ;
-  }
-
-  .navmenu a{
-    width:fit-content;
-    scale:75%;
-  }
-}
 
 
 @keyframes botao {
