--- a/MyWebsite/css/search_correct.css
+++ b/MyWebsite/css/search_correct.css
@@ -21,7 +21,7 @@ body{
     
 
     background-image: url("../imgs/testtt.png");
-    background-size: cover;
+    background-size:cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
 
@@ -75,7 +75,6 @@ width:100%;
 }
 
 p{
-    margin-top:0px;
     color:white;
     
 }
@@ -84,18 +83,21 @@ p{
 
 
 .centralized{
-    width:max-content;
-    display:flex;
+    width:fit-content;
+    height:100%;
+    display: flex;
     flex-direction: column;
+    box-sizing:border-box;
     background-color: rgb(20, 20, 20);
     margin-left: auto;
     margin-right:auto;
-    padding:1%;
+    padding:20px;
     border-radius: 12px;
 }
 
 .centralized p{
     color:white;
+    text-align:center;
 }
 @media (max-width:480px){
     .centralized{
@@ -107,6 +109,7 @@ p{
 
 h1{
     text-align: center;
+    position: static;
     letter-spacing: 2.5px;
     color:white;
     /*text-shadow: 0 0 20px purple;*/
@@ -125,12 +128,13 @@ h1{
 
 h3{
     text-align: center;
+
     letter-spacing: 1.5px;
-    color:black;
+    color:rgb(20, 20, 20);
 }
 
 input[type=text],input[type=password] {
-    width: 96.5%;
+    width: 100%;
     height:15px;
     border: 2px solid #bebebe;
     background-color: #e0e0e0;
@@ -155,10 +159,18 @@ input:focus{
 
 }
 
+#check_tabela_toda{
+width: fit-content;
+height:fit-content;
+display: inline;
+
+}
+
 form{
     align-items: center;
    
 }
+
 
 .buttn{
     
@@ -185,7 +197,7 @@ form{
 /*Menu Navegação*/
 
 .navmenu{
-    background-color:rgb(223, 223, 223);
+    background-color:rgb(233, 233, 233);
     height: fit-content;
     width: max-content;
     border-radius:18px;
@@ -195,7 +207,7 @@ form{
     margin-right: auto;
     flex-direction: row;
     justify-content: center;
-   /* transition: width 1s ease-in-out;*/
+    /*transition: width 1s ease-in-out;*/
     
 }
 
@@ -228,19 +240,48 @@ form{
     display:none;
 }
 
-#atualizar{
-    background-color:rgb(147, 2, 204);
+#buscar{
+    background-color:  rgb(147, 2, 204);
+    color:white;
+    
+    transition: background-color .2s ease-in;
 }
 
-@media screen and (max-width:600px){
-    .navmenu:not(:first-child){display:none;}
-    .navmenu a.icon{
-        float:right;
-        display:block;
-    }
+#buscar:hover{
+ background-color: rgb(124, 0, 173);   
 }
 
-@media screen and (max-width: 600px) {
+
+#highlight_search_example{
+    color:rgb(147, 2, 204);
+    width:min-content;
+    margin-inline:auto;
+    display:block;
+    justify-content: center;
+
+}
+
+
+#Highlights{
+    color:rgb(147, 2, 204);
+    
+}
+
+
+
+
+/*Inicio decoração das "saídas" da query*/
+
+.p_resultados{
+    height: 100%;
+    width:100%;
+    background-color: rgb(20, 20, 20);
+    border: 2px solid red;
+}
+
+
+
+/*@media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
@@ -252,7 +293,70 @@ form{
       display: block;
       text-align: left;
     }
+      
   }
+*/
+
+@media(max-width:830px) and (max-height:1180px){
+    .centralized{
+        width:50%;
+    
+    }
+    
+    body{
+        background-image: url("../imgs/testtt.png");
+    }
+}  
+
+@media (max-width:600px){
+    [class*="navmenu"]{
+        width:fit-content;
+        scale:90%;
+    }
+
+    body{
+        background-size: 430px 935px;
+    }
+  }
+
+  @media (max-width:430) and (max-height:792px){
+    body{
+        background-image: url("/imgs/teste400px.png");
+    }
+  }
+
+  @media (max-width:400px){
+    *{
+      
+        height:fit-content;
+    }
+  }
+  
+
+  @media(max-width:390px){
+    .navmenu{
+
+
+       width:100%;
+
+       
+    ;
+  }
+
+  .navmenu a{
+    width:fit-content;
+    scale:75%;
+  }
+
+  .centralized{
+    width:100%;
+  }
+
+.centralized p{
+    width: fit-content;
+}
+
+}
 
 
 @keyframes botao {
