--- a/MyWebsite/css/teste_processaform.css
+++ b/MyWebsite/css/teste_processaform.css
@@ -21,7 +21,7 @@ body{
     
 
     background-image: url("../imgs/testtt.png");
-    background-size: cover;
+    background-size:cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
 
@@ -75,7 +75,6 @@ width:100%;
 }
 
 p{
-    margin-top:0px;
     color:white;
     
 }
@@ -85,17 +84,23 @@ p{
 
 .centralized{
     width:max-content;
-    display:flex;
+    height:100%;
+    display: flex;
     flex-direction: column;
+    box-sizing:border-box;
     background-color: rgb(20, 20, 20);
     margin-left: auto;
     margin-right:auto;
-    padding:1%;
+    padding:20px;
     border-radius: 12px;
 }
 
 .centralized p{
     color:white;
+}
+
+.label{
+    color:rgb(147, 2, 204);
 }
 @media (max-width:480px){
     .centralized{
@@ -107,6 +112,7 @@ p{
 
 h1{
     text-align: center;
+    position: static;
     letter-spacing: 2.5px;
     color:white;
     /*text-shadow: 0 0 20px purple;*/
@@ -125,13 +131,14 @@ h1{
 
 h3{
     text-align: center;
+    margin-top: 0px;
     letter-spacing: 1.5px;
-    color:black;
+    color:white;
 }
 
 input[type=text],input[type=password] {
     width: 96.5%;
-    height:15px;
+    height:15%;
     border: 2px solid #bebebe;
     background-color: #e0e0e0;
     border-radius: 5px; 
@@ -160,10 +167,33 @@ form{
    
 }
 
-.buttn{
+#verif_certeza{
+    display:inline;
+}
+
+#label_verif_certeza{
+
+    display:inline; 
+    color: gainsboro;
+
+}
+
+
+.buttns_container{
+    height:fit-content;
+    width:fit-content;
+    border: 2px solid red;
+    margin-inline: auto;;
+    display:flex;
+    align-content: center;
+    justify-content: space-evenly;
+}
+
+
+#bttn_update{
     
     margin-top: 25px;
-    display: block;
+    display: flex;
     background-color: rgb(105, 6, 145);
     color:white;
     border-radius: 8px;
@@ -172,7 +202,26 @@ form{
   
 }
 
-.buttn:hover {
+#bttn_update:hover {
+    animation-name: botao;
+    animation-duration: 1s;
+    
+    
+}
+
+.buttn_delete{
+    
+    margin-top: 25px;
+    display: flex;
+    background-color: rgb(105, 6, 145);
+    color:white;
+    border-radius: 8px;
+    border: 2px solid rgb(105, 6, 145);
+    
+  
+}
+
+.bttn_delete:hover {
     animation-name: botao;
     animation-duration: 1s;
     
@@ -185,7 +234,7 @@ form{
 /*Menu Navegação*/
 
 .navmenu{
-    background-color:rgb(223, 223, 223);
+    background-color:rgb(233, 233, 233);
     height: fit-content;
     width: max-content;
     border-radius:18px;
@@ -195,7 +244,7 @@ form{
     margin-right: auto;
     flex-direction: row;
     justify-content: center;
-   /* transition: width 1s ease-in-out;*/
+    /*transition: width 1s ease-in-out;*/
     
 }
 
@@ -213,6 +262,7 @@ form{
     color:black;
     text-align: center;
     /*border-radius: 12px;*/ 
+    
     padding: 14px 16px;
     font-size: 17px;
     text-decoration: none;
@@ -228,19 +278,19 @@ form{
     display:none;
 }
 
-#atualizar{
-    background-color:rgb(147, 2, 204);
+#registrar{
+    background-color:  rgb(147, 2, 204);
+    color:white;
+    transition: background-color .2s ease-in;
 }
 
-@media screen and (max-width:600px){
-    .navmenu:not(:first-child){display:none;}
-    .navmenu a.icon{
-        float:right;
-        display:block;
-    }
+#registrar:hover{
+ background-color: rgb(124, 0, 173);   
 }
 
-@media screen and (max-width: 600px) {
+
+
+/*@media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
@@ -252,7 +302,49 @@ form{
       display: block;
       text-align: left;
     }
+      
   }
+*/
+
+  @media (max-width:600px){
+    [class*="navmenu"]{
+        width:fit-content;
+        scale:90%;
+    }
+
+    body{
+        background-size: 430px 935px;
+    }
+  }
+
+  @media(max-width:430){
+    body{
+        background-image: url("/imgs/teste400px.png");
+    }
+  }
+
+  @media (max-width:400px){
+    *{
+      
+        height:fit-content;
+    }
+  }
+
+  @media(max-width:390px){
+    .navmenu{
+
+
+       width:100%;
+
+       
+    ;
+  }
+
+  .navmenu a{
+    width:fit-content;
+    scale:75%;
+  }
+}
 
 
 @keyframes botao {
