--- a/MyWebsite/css/delete.css
+++ b/MyWebsite/css/delete.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing: border-box;
+}
+
+
 .bebas-neue-regular {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
@@ -64,6 +69,17 @@ width:100%;
 
 }
 
+#verif_certeza{
+    display:inline;
+}
+
+#label_verif_certeza{
+
+    display:inline; 
+    color: rgb(153, 0, 255);
+
+}
+
 #back_buttn{
     border: 2px solid red;
     display:flex;
@@ -78,12 +94,13 @@ height:48px;
 width:98px;
 border: 2px solid white;
 border-radius: 42px;
-transition: scale .2s ease-in; 
+transition: background-color .2s ease-in-out; 
 
 }
 
 #bk_buttn:hover{
-    scale:103%;
+    background-color: gainsboro;
+    scale:100.5%;
 }
 
 p{
@@ -91,6 +108,126 @@ p{
     
     
 }
+
+
+
+/*Começo menu perfil*/
+
+
+.accountMenuContainer{
+    height: max-content;
+    width: max-content;
+   /* border: 2px solid red;*/
+    justify-self: right;
+    margin-left:0px;
+    
+}
+
+
+
+
+.icon{
+    position:relative;
+    width:150px;
+    height: 50px;
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(rgb(255,255,255),rgb(231, 231, 231));
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 17px;
+    border-radius: 5px;
+    box-shadow: 0 0px 10px rgba(0,0,0,0.2);
+    cursor: pointer; 
+
+}
+
+.icon_container{
+    position: relative;
+    /*border: 2px solid orange;*/
+    /*background-color: #e0e0e0;*/
+    height: fit-content;     
+    width:150px;
+    justify-self: center;
+    
+   
+    
+}
+
+.items_icons{
+    height: 16px;
+    width:16px;
+    align-content: left;
+    text-align: center;
+    margin-right: 5px;
+}
+
+
+.icon_container .icone_esq, .icon .icone_dir{
+    position:relative;
+    display:inline-block;
+    width: 15px;
+    height:5px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 40px;
+    transition: .5s;
+}
+
+.icon_container .icone_esq{
+    left:7px;
+    transform: rotate(45deg);
+}
+
+.icon_container.active .icone_esq{
+    transform: rotate(135deg);
+}
+
+.icon_container .icone_dir{
+    transform: rotate(-45deg);
+}
+
+.icon_container.active .icone_dir{
+    transform: rotate(-135deg);
+}
+
+
+.items{
+    margin-top: 20px;
+    overflow: hidden;
+
+}
+ .items a{
+    position: relative;
+    display: flex;
+    width: 150px;
+    margin-top:7px;
+    justify-content: center;
+    padding: 8px;
+    text-decoration-style: none;
+    text-decoration: none;
+    font-size: 18px;
+    color:black;
+    background-color: #ffffff;
+    border-radius: 5px;
+    transition: .5s ;
+    transition-delay: calc(60ms*var(--i));
+    box-shadow: 0 0px 10px rgba(0,0,0,0.2);
+    overflow: hidden;
+    left:105%;
+    
+    
+    
+}
+
+.icon_container.active .items a{
+    left: 0%;
+}
+
+
+
+/*fim menu perfil*/
+
 
 
 
@@ -109,6 +246,10 @@ p{
 #legenda_delete{
     margin-top:0;
     margin-bottom:8%;
+    align-self: center;
+    color: rgb(147, 2, 204);
+    
+
 }
 
 @media (max-width:480px){
@@ -139,11 +280,13 @@ h1{
 
 h3{
     text-align: center;
+    color:white;
+    letter-spacing: .7px;
 }
 
 input[type=text],input[type=password] {
-    width: 96.5%;
-    height:15px;
+    width: 100%;
+    height:20px;
     border: 2px solid #bebebe;
     background-color: #e0e0e0;
     border-radius: 5px; 
@@ -206,9 +349,9 @@ form{
 /*Menu Navegação*/
 
 .navmenu{
-    background-color:rgb(20, 20, 20);
+    background-color:rgb(233, 233, 233);
     height: fit-content;
-    width: 25.2%;
+    width: max-content;
     border-radius:18px;
     overflow: hidden;
     display: flex;
@@ -216,24 +359,25 @@ form{
     margin-right: auto;
     flex-direction: row;
     justify-content: center;
-    transition: width 1s ease-in-out;
+    /*transition: width 1s ease-in-out;*/
     
 }
 
 
 
 
-.navmenu:hover{
+/*.navmenu:hover{
     width:50%;
     }
-
+*/
 
 .navmenu a{
     float:left;
     display:block;
-    color:white;
+    color:black;
     text-align: center;
     /*border-radius: 12px;*/ 
+    
     padding: 14px 16px;
     font-size: 17px;
     text-decoration: none;
@@ -241,13 +385,24 @@ form{
     }
 
 .navmenu a:hover{
-    background-color: rgb(49, 49, 49);
-    color:white;
+    background-color: rgb(201, 201, 201);
+    
 }
 
 .navmenu .icon{
     display:none;
 }
+
+#deletar{
+    background-color:  rgb(147, 2, 204);
+    color:white;
+    transition: background-color .2s ease-in;
+}
+
+#deletar:hover{
+ background-color: rgb(124, 0, 173);   
+}
+
 
 
 @media screen and (max-width:600px){
