--- a/MyWebsite/css/index.css
+++ b/MyWebsite/css/index.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing: border-box;
+}
+
+
 /*fontes*/
 
 
@@ -21,7 +26,7 @@ body{
     
 
     background-image: url("../imgs/testtt.png");
-    background-size: cover;
+    background-size:cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
 
@@ -84,12 +89,14 @@ p{
 
 .centralized{
     width:max-content;
-    display:flex;
+    height:100%;
+    display: flex;
     flex-direction: column;
+    box-sizing:border-box;
     background-color: rgb(20, 20, 20);
     margin-left: auto;
     margin-right:auto;
-    padding:1%;
+    padding:20px;
     border-radius: 12px;
 }
 
@@ -106,6 +113,7 @@ p{
 
 h1{
     text-align: center;
+    position: static;
     letter-spacing: 2.5px;
     color:white;
     /*text-shadow: 0 0 20px purple;*/
@@ -115,22 +123,24 @@ h1{
 
 
 #logo_on_page{
-    scale:75%;
-    display:block;
-    margin-inline: auto;
+    width:320px;
+    display:flex;
+    justify-self: center;
+    margin-bottom:5px;
 }
 
 
 
 h3{
     text-align: center;
+    margin-top: 0px;
     letter-spacing: 1.5px;
-    color:black;
+    color:white;
 }
 
 input[type=text],input[type=password] {
-    width: 96.5%;
-    height:15px;
+    width: 100%;
+    height:15%;
     border: 2px solid #bebebe;
     background-color: #e0e0e0;
     border-radius: 5px; 
@@ -163,6 +173,7 @@ form{
     
     margin-top: 25px;
     display: block;
+    cursor: pointer;
     background-color: rgb(105, 6, 145);
     color:white;
     border-radius: 8px;
@@ -186,7 +197,7 @@ form{
 .navmenu{
     background-color:rgb(233, 233, 233);
     height: fit-content;
-    width: 25.2%;
+    width: max-content;
     border-radius:18px;
     overflow: hidden;
     display: flex;
@@ -194,17 +205,17 @@ form{
     margin-right: auto;
     flex-direction: row;
     justify-content: center;
-    transition: width 1s ease-in-out;
+    /*transition: width 1s ease-in-out;*/
     
 }
 
 
 
 
-.navmenu:hover{
+/*.navmenu:hover{
     width:50%;
     }
-
+*/
 
 .navmenu a{
     float:left;
@@ -230,18 +241,18 @@ form{
 
 #registrar{
     background-color:  rgb(147, 2, 204);
+    height: 100%;
     color:white;
+    transition: background-color .2s ease-in;
 }
 
-@media screen and (max-width:600px){
-    .navmenu:not(:first-child){display:none;}
-    .navmenu a.icon{
-        float:right;
-        display:block;
-    }
+#registrar:hover{
+ background-color: rgb(124, 0, 173);   
 }
 
-@media screen and (max-width: 600px) {
+
+
+/*@media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
@@ -253,7 +264,177 @@ form{
       display: block;
       text-align: left;
     }
+      
   }
+*/
+
+
+/*fim menu navegação*/
+
+/*Começo menu perfil*/
+
+
+.accountMenuContainer{
+    height: max-content;
+    width: max-content;
+    /*border: 2px solid red;*/
+    justify-self: right;
+    margin-left:0px;
+    
+}
+
+
+
+
+.icon{
+    position:relative;
+    width:150px;
+    height: 50px;
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(rgb(255,255,255),rgb(231, 231, 231));
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 17px;
+    border-radius: 5px;
+    box-shadow: 0 0px 10px rgba(0,0,0,0.2);
+    cursor: pointer; 
+
+}
+
+.icon_container{
+    position: relative;
+    /*border: 2px solid orange;*/
+    /*background-color: #e0e0e0;*/
+    height: fit-content;     
+    width:150px;
+    justify-self: center;
+    
+   
+    
+}
+
+.items_icons{
+    height: 16px;
+    width:16px;
+    align-content: left;
+    text-align: center;
+    margin-right: 5px;
+}
+
+
+.icon_container .icone_esq, .icon .icone_dir{
+    position:relative;
+    display:inline-block;
+    width: 15px;
+    height:5px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 40px;
+    transition: .5s;
+}
+
+.icon_container .icone_esq{
+    left:7px;
+    transform: rotate(45deg);
+}
+
+.icon_container.active .icone_esq{
+    transform: rotate(135deg);
+}
+
+.icon_container .icone_dir{
+    transform: rotate(-45deg);
+}
+
+.icon_container.active .icone_dir{
+    transform: rotate(-135deg);
+}
+
+
+.items{
+    margin-top: 20px;
+    overflow: hidden;
+
+}
+ .items a{
+    position: relative;
+    display: flex;
+    width: 150px;
+    margin-top:7px;
+    justify-content: center;
+    padding: 8px;
+    text-decoration-style: none;
+    text-decoration: none;
+    font-size: 18px;
+    color:black;
+    background-color: #ffffff;
+    border-radius: 5px;
+    transition: .5s ;
+    transition-delay: calc(60ms*var(--i));
+    box-shadow: 0 0px 10px rgba(0,0,0,0.2);
+    overflow: hidden;
+    left:105%;
+    
+    
+    
+}
+
+.icon_container.active .items a{
+    left: 0%;
+}
+
+
+
+/*fim menu perfil*/
+@media (max-width:709px){
+    .icon{
+        width: 75px;
+    }
+
+
+}
+
+
+  @media (max-width:600px){
+    [class*="navmenu"]{
+        width:fit-content;
+        scale:90%;
+    }
+
+    body{
+        background-size: 430px 935px;
+    }
+  }
+
+  @media(max-width:430){
+    body{
+        background-image: url("/imgs/teste400px.png");
+    }
+  }
+
+  @media (max-width:400px){
+    *{
+      
+        height:fit-content;
+    }
+  }
+
+  @media(max-width:390px){
+    .navmenu{
+
+
+       width:100%;
+
+       
+    ;
+  }
+
+  .navmenu a{
+    width:fit-content;
+    scale:75%;
+  }
+}
 
 
 @keyframes botao {
