--- a/MyWebsite/css/update.css
+++ b/MyWebsite/css/update.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 /*fontes*/
 
 
@@ -75,6 +79,7 @@ width:100%;
 }
 
 p{
+    margin-top:0px;
     color:white;
     
 }
@@ -95,6 +100,7 @@ p{
 
 .centralized p{
     color:white;
+    
 }
 @media (max-width:480px){
     .centralized{
@@ -167,6 +173,7 @@ form{
     color:white;
     border-radius: 8px;
     border: 2px solid rgb(105, 6, 145);
+    cursor: pointer;
     
   
 }
@@ -186,7 +193,7 @@ form{
 .navmenu{
     background-color:rgb(223, 223, 223);
     height: fit-content;
-    width: 25.2%;
+    width: max-content;
     border-radius:18px;
     overflow: hidden;
     display: flex;
@@ -194,17 +201,17 @@ form{
     margin-right: auto;
     flex-direction: row;
     justify-content: center;
-    transition: width 1s ease-in-out;
+   /* transition: width 1s ease-in-out;*/
     
 }
 
 
 
 
-.navmenu:hover{
+/*.navmenu:hover{
     width:50%;
     }
-
+*/
 
 .navmenu a{
     float:left;
@@ -230,6 +237,126 @@ form{
 #atualizar{
     background-color:rgb(147, 2, 204);
 }
+
+
+/*Começo menu perfil*/
+
+
+.accountMenuContainer{
+    height: max-content;
+    width: max-content;
+    /*border: 2px solid red;*/
+    justify-self: right;
+    margin-left:0px;
+    
+}
+
+
+
+
+.icon{
+    position:relative;
+    width:150px;
+    height: 50px;
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(rgb(255,255,255),rgb(231, 231, 231));
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 17px;
+    border-radius: 5px;
+    box-shadow: 0 0px 10px rgba(0,0,0,0.2);
+    cursor: pointer; 
+
+}
+
+.icon_container{
+    position: relative;
+    /*border: 2px solid orange;*/
+    /*background-color: #e0e0e0;*/
+    height: fit-content;     
+    width:150px;
+    justify-self: center;
+    
+   
+    
+}
+
+.items_icons{
+    height: 16px;
+    width:16px;
+    align-content: left;
+    text-align: center;
+    margin-right: 5px;
+}
+
+
+.icon_container .icone_esq, .icon .icone_dir{
+    position:relative;
+    display:inline-block;
+    width: 15px;
+    height:5px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 40px;
+    transition: .5s;
+}
+
+.icon_container .icone_esq{
+    left:7px;
+    transform: rotate(45deg);
+}
+
+.icon_container.active .icone_esq{
+    transform: rotate(135deg);
+}
+
+.icon_container .icone_dir{
+    transform: rotate(-45deg);
+}
+
+.icon_container.active .icone_dir{
+    transform: rotate(-135deg);
+}
+
+
+.items{
+    margin-top: 20px;
+    overflow: hidden;
+
+}
+ .items a{
+    position: relative;
+    display: flex;
+    width: 150px;
+    margin-top:7px;
+    justify-content: center;
+    padding: 8px;
+    text-decoration-style: none;
+    text-decoration: none;
+    font-size: 18px;
+    color:black;
+    background-color: #ffffff;
+    border-radius: 5px;
+    transition: .5s ;
+    transition-delay: calc(60ms*var(--i));
+    box-shadow: 0 0px 10px rgba(0,0,0,0.2);
+    overflow: hidden;
+    left:105%;
+    
+    
+    
+}
+
+.icon_container.active .items a{
+    left: 0%;
+}
+
+
+
+/*fim menu perfil*/
+
+
 
 @media screen and (max-width:600px){
     .navmenu:not(:first-child){display:none;}
